Fix responsiveness issues on mobile

--- a/chatapp/src/app/components/chat/message/message.component.css
+++ b/chatapp/src/app/components/chat/message/message.component.css
@@ -13,7 +13,8 @@
     clear: both;
     line-height: 18px;
     position: relative;
-    word-wrap: break-word;
+    overflow-wrap: break-word;
+    max-width: 80%;
 }
 
 .message-server {
