--- a/chatapp/src/app/components/chat/textbox/textbox.component.css
+++ b/chatapp/src/app/components/chat/textbox/textbox.component.css
@@ -16,7 +16,7 @@
 }
 
 .input-holder input {
-    width: 95%;
+    width: calc(100% - 60px);
 }
 
 .button-holder {
